native/crates/specular-scene/tests/snapshots/panels__sidebar.snap
---
source: crates/specular-scene/tests/panels.rs
expression: app.panel_scene_snapshot()
---
screen rect 0,44 256x376 fill=#f2f2f2
screen rect 255,44 1x376 fill=#cac6c3
screen text "Canvases" 12,44 box-h=36 12/16 w500 #303030 middle
screen path M101,60.5 L104,63.5 L107,60.5 stroke=#303030/1
screen path M225.92,62 L234.08,62 M230,57.92 L230,66.08 stroke=#30303094/1.17
screen path M25.5,101.83 C24.86,101.83 24.33,101.31 24.33,100.67 L24.33,91.33 C24.33,90.69 24.86,90.17 25.5,90.17 L30.17,90.17 C30.54,90.17 30.9,90.31 31.16,90.58 L33.25,92.67 C33.52,92.93 33.67,93.29 33.67,93.67 L33.67,100.67 C33.67,101.31 33.14,101.83 32.5,101.83 Z stroke=#30303094/1.17 clip=0,80 255x340
screen path M30.17,90.17 L30.17,93.08 C30.17,93.41 30.43,93.67 30.75,93.67 L33.67,93.67 stroke=#30303094/1.17 clip=0,80 255x340
screen text "Home" 44,82 box-h=28 12/16 #303030 middle clip=0,80 255x340
screen path M236.67,92.5 L230.25,98.92 L227.33,96 stroke=#303030/1.17 clip=0,80 255x340
screen rect 0,110 255x28 fill=#e7e5e466 clip=0,80 255x340
screen path M25.5,129.83 C24.86,129.83 24.33,129.31 24.33,128.67 L24.33,119.33 C24.33,118.69 24.86,118.17 25.5,118.17 L30.17,118.17 C30.54,118.17 30.9,118.31 31.16,118.58 L33.25,120.67 C33.52,120.93 33.67,121.29 33.67,121.67 L33.67,128.67 C33.67,129.31 33.14,129.83 32.5,129.83 Z stroke=#30303094/1.17 clip=0,80 255x340
screen path M30.17,118.17 L30.17,121.08 C30.17,121.41 30.43,121.67 30.75,121.67 L33.67,121.67 stroke=#30303094/1.17 clip=0,80 255x340
screen text "Plans" 44,110 box-h=28 12/16 #303030 middle clip=0,80 255x340
screen rect 0,146 255x1 fill=#e7e5e4 clip=0,80 255x340
screen text "Notes" 12,155 box-h=36 12/16 w500 #303030 middle clip=0,80 255x340
screen path M71,171.5 L74,174.5 L77,171.5 stroke=#303030/1 clip=0,80 255x340
screen path M34.25,203.25 C34.25,202.88 34.1,202.52 33.84,202.25 L31.75,200.16 C31.48,199.9 31.12,199.75 30.75,199.75 L24.92,199.75 C24.27,199.75 23.75,200.27 23.75,200.92 L23.75,209.08 C23.75,209.73 24.27,210.25 24.92,210.25 L33.08,210.25 C33.73,210.25 34.25,209.73 34.25,209.08 Z stroke=#30303094/1.17 clip=0,80 255x340
screen path M30.75,199.75 L30.75,202.67 C30.75,202.99 31.01,203.25 31.33,203.25 L34.25,203.25 stroke=#30303094/1.17 clip=0,80 255x340
screen text "a sticky with a ra…" 44,191 box-h=28 12/16 #303030 middle clip=0,80 255x340
screen rect 0,219 255x28 fill=#e7e5e4cc clip=0,80 255x340
screen path M22.75,226.75 L35.25,226.75 L35.25,239.25 L22.75,239.25 Z stroke=#30303094/1 clip=0,80 255x340
screen text "Rectangle" 44,219 box-h=28 12/16 #303030 middle clip=0,80 255x340
screen path 19 commands in 23.17,255.75 11.72x9.92 stroke=#30303094/1.17 clip=0,80 255x340
screen text "1" 239,247 box-h=28 12/16 #30303094 right middle clip=0,80 255x340
screen text "Group" 44,247 box-h=28 12/16 #303030 middle clip=0,80 255x340
screen path M9,259.5 L12,262.5 L15,259.5 stroke=#30303094/1 clip=0,80 255x340
screen path M48.25,287.25 C48.25,286.88 48.1,286.52 47.84,286.25 L45.75,284.16 C45.48,283.9 45.12,283.75 44.75,283.75 L38.92,283.75 C38.27,283.75 37.75,284.27 37.75,284.92 L37.75,293.08 C37.75,293.73 38.27,294.25 38.92,294.25 L47.08,294.25 C47.73,294.25 48.25,293.73 48.25,293.08 Z stroke=#30303094/1.17 clip=0,80 255x340
screen path M44.75,283.75 L44.75,286.67 C44.75,286.99 45.01,287.25 45.33,287.25 L48.25,287.25 stroke=#30303094/1.17 clip=0,80 255x340
screen text "in the group" 58,275 box-h=28 12/16 #303030 middle clip=0,80 255x340
screen text "Pages" 12,303 box-h=36 12/16 w500 #303030 middle clip=0,80 255x340
screen path M71,319.5 L74,322.5 L77,319.5 stroke=#303030/1 clip=0,80 255x340
screen path M26.08,347.17 L31.92,347.17 C32.56,347.17 33.08,347.69 33.08,348.33 L33.08,357.67 C33.08,358.31 32.56,358.83 31.92,358.83 L26.08,358.83 C25.44,358.83 24.92,358.31 24.92,357.67 L24.92,348.33 C24.92,347.69 25.44,347.17 26.08,347.17 Z stroke=#30303094/1.17 clip=0,80 255x340
screen path M29,356.5 L29.01,356.5 stroke=#30303094/1.17 clip=0,80 255x340
screen text "375×667" 239,339 box-h=28 12/16 #30303094 right middle clip=0,80 255x340
screen text "example.com" 44,339 box-h=28 12/16 #303030 middle clip=0,80 255x340
screen path M9,351.5 L12,354.5 L15,351.5 stroke=#30303094/1 clip=0,80 255x340
screen path M48.25,379.25 C48.25,378.88 48.1,378.52 47.84,378.25 L45.75,376.16 C45.48,375.9 45.12,375.75 44.75,375.75 L38.92,375.75 C38.27,375.75 37.75,376.27 37.75,376.92 L37.75,385.08 C37.75,385.73 38.27,386.25 38.92,386.25 L47.08,386.25 C47.73,386.25 48.25,385.73 48.25,385.08 Z stroke=#30303094/1.17 clip=0,80 255x340 opacity=0.5
screen path M44.75,375.75 L44.75,378.67 C44.75,378.99 45.01,379.25 45.33,379.25 L48.25,379.25 stroke=#30303094/1.17 clip=0,80 255x340 opacity=0.5
screen text "hooked note" 58,367 box-h=28 12/16 #303030 middle clip=0,80 255x340 opacity=0.5
screen rect 0,0 1200x44 fill=#d6d3d1
screen rect 0,43 1200x1 fill=#a6a09b
screen rect 372,8 32x28 r=6 fill=#fdf8f5
screen path 24 commands in 380.81,14.82 15.2x15.19 fill=#e8e8e8
screen path 40 commands in 380.81,14.82 15.2x15.19 fill=#45403c
screen rect 412,14 1x16 fill=#18181b33
screen path M439.44,17.51 C439.48,17.63 439.5,17.75 439.5,17.88 C439.5,18.5 439,19 438.38,19 L436.62,19 C436,19 435.5,18.5 435.5,17.88 C435.5,17.75 435.52,17.63 435.56,17.51 L436.98,13.47 C437.16,12.98 437.84,12.98 438.02,13.47 L439.44,17.51 Z fill=#cd0000 clip=427,12 20x20
screen path M440,17.88 C440,18.77 439.27,19.5 438.38,19.5 L436.62,19.5 C435.73,19.5 435,18.77 435,17.88 C435,17.7 435.03,17.51 435.09,17.34 L436.51,13.3 C436.84,12.37 438.16,12.37 438.49,13.3 L439.91,17.34 C439.97,17.51 440,17.7 440,17.88 Z stroke=#18181b/1 clip=427,12 20x20
screen path 14 commands in 431,17.99 13x50.01 fill=#f4f4f4 clip=427,12 20x20
screen path 14 commands in 431.5,18.49 12x49.01 stroke=#18181b/1 clip=427,12 20x20
screen path M440.1,20.37 L443,27 C441.57,25.9 439.49,26.45 438.79,28.11 L438,30 L438,19 C438.91,19 439.74,19.54 440.1,20.37 Z fill=#dbdbdb6e clip=427,12 20x20
screen path M437,19 L438,19 L438,19 L438,31 L438,31 L437,31 L437,31 L437,19 L437,19 Z fill=#b5b5b5aa clip=427,12 20x20
screen path M470.4,15.77 L479.38,16.24 C481.04,16.33 482.32,17.74 482.26,19.4 L481.88,28.39 C481.81,30.04 480.41,31.32 478.76,31.23 L469.77,30.76 C468.12,30.67 466.83,29.26 466.9,27.6 L467.28,18.61 C467.35,16.96 468.74,15.68 470.4,15.77 Z fill=#ffeab0
screen path M470.38,16.27 L479.36,16.74 C480.74,16.81 481.81,17.99 481.76,19.37 L481.38,28.36 C481.32,29.74 480.16,30.8 478.78,30.73 L469.79,30.26 C468.41,30.19 467.34,29.01 467.4,27.63 L467.78,18.64 C467.83,17.26 469,16.2 470.38,16.27 Z stroke=#45403c/1
screen path M464,15 L464,26 C464,27.1 464.9,28 466,28 L477,28 C478.11,28 479,27.1 479,26 L479,22.88 C479,17 475,13 471.4,13 L466,13 C464.9,13 464,13.9 464,15 Z fill=#ffeab0
screen path M466,13.5 L471.4,13.5 C474.64,13.5 478.5,17.19 478.5,22.88 L478.5,26 C478.5,26.83 477.83,27.5 477,27.5 L466,27.5 C465.17,27.5 464.5,26.83 464.5,26 L464.5,15 C464.5,14.17 465.17,13.5 466,13.5 Z stroke=#45403c/1
screen path M471.4,13.5 C471.52,13.5 471.66,13.54 471.84,13.61 C473.9,14.45 473.86,17.23 472.82,19.21 C472.73,19.38 472.87,19.58 473.06,19.55 L473.69,19.45 C475.45,19.17 477.38,19.71 478.07,21.35 C478.39,22.12 478.5,22.74 478.5,23 stroke=#45403c/1
screen path M501,13.5 L508,13.5 C508.83,13.5 509.5,14.17 509.5,15 L509.5,22 C509.5,22.83 508.83,23.5 508,23.5 L501,23.5 C500.17,23.5 499.5,22.83 499.5,22 L499.5,15 C499.5,14.17 500.17,13.5 501,13.5 Z fill=#efcbcd stroke=#45403c/1
screen path M510,20.5 L510,20.5 C512.49,20.5 514.5,22.51 514.5,25 L514.5,25 C514.5,27.49 512.49,29.5 510,29.5 L510,29.5 C507.51,29.5 505.5,27.49 505.5,25 L505.5,25 C505.5,22.51 507.51,20.5 510,20.5 Z fill=#efcbcd stroke=#45403c/1
screen path 66 commands in 511.5,13.5 7.21x7.21 fill=#45403c
screen path M537.5,13 L549.5,13 C550.6,13 551.5,13.9 551.5,15 L551.5,23 C551.5,24.1 550.6,25 549.5,25 L537.5,25 C536.4,25 535.5,24.1 535.5,23 L535.5,15 C535.5,13.9 536.4,13 537.5,13 Z fill=#e8e8e8
screen path M535.5,18 L535.5,15 C535.5,13.9 536.4,13 537.5,13 L549.5,13 C550.6,13 551.5,13.9 551.5,15 L551.5,18 Z fill=#edebe3
screen path M535.5,18 L551.5,18 stroke=#45403c/1
screen path M538.5,14.5 L538.5,14.5 C539.05,14.5 539.5,14.95 539.5,15.5 L539.5,15.5 C539.5,16.05 539.05,16.5 538.5,16.5 L538.5,16.5 C537.95,16.5 537.5,16.05 537.5,15.5 L537.5,15.5 C537.5,14.95 537.95,14.5 538.5,14.5 Z fill=#45403c
screen path M541.5,14.5 L541.5,14.5 C542.05,14.5 542.5,14.95 542.5,15.5 L542.5,15.5 C542.5,16.05 542.05,16.5 541.5,16.5 L541.5,16.5 C540.95,16.5 540.5,16.05 540.5,15.5 L540.5,15.5 C540.5,14.95 540.95,14.5 541.5,14.5 Z fill=#45403c
screen path M544.5,14.5 L544.5,14.5 C545.05,14.5 545.5,14.95 545.5,15.5 L545.5,15.5 C545.5,16.05 545.05,16.5 544.5,16.5 L544.5,16.5 C543.95,16.5 543.5,16.05 543.5,15.5 L543.5,15.5 C543.5,14.95 543.95,14.5 544.5,14.5 Z fill=#45403c
screen path M537.5,13 L549.5,13 C550.6,13 551.5,13.9 551.5,15 L551.5,23 C551.5,24.1 550.6,25 549.5,25 L537.5,25 C536.4,25 535.5,24.1 535.5,23 L535.5,15 C535.5,13.9 536.4,13 537.5,13 Z stroke=#45403c/1
screen path M548.37,15.6 L552.57,16.73 C553.81,17.06 554.55,18.34 554.21,19.58 L551.79,28.61 C551.46,29.85 550.19,30.58 548.95,30.25 L544.75,29.13 C543.51,28.79 542.77,27.52 543.1,26.28 L545.52,17.25 C545.85,16.01 547.13,15.27 548.37,15.6 Z fill=#e8e8e8 stroke=#45403c/1
screen path M545.56,26.75 L549.43,27.79 stroke=#45403c/1
screen path 56 commands in 574,14.5 15x13.5 fill=#e8e8e8 stroke=#45403c/1
screen path 69 commands in 610.44,13.94 13.13x16.13 fill=#45403c
screen path 50 commands in 611.56,15.06 10.87x13.88 fill=#e8e8e8
screen rect 641,14 1x16 fill=#18181b33
screen path 25 commands in 657.56,13.57 12.47x12.48 fill=#e8e8e8 stroke=#45403c/1.11
screen path 62 commands in 659.33,15.33 16.11x16.11 fill=#45403c
screen path 79 commands in 693.21,13.23 17.56x17.56 fill=#9b9b9b
screen path 28 commands in 701.01,13.51 9.48x9.48 fill=#dedede stroke=#45403c/1.11
screen path 17 commands in 693.06,19.48 11.46x11.46 fill=#e8e8e8 stroke=#45403c/1.11
screen rect 726,14 1x16 fill=#18181b33
screen path 76 commands in 742.93,13.17 16.9x16.9 fill=#45403c
screen path 20 commands in 743.94,20.12 8.93x8.93 fill=#e8e8e8
screen text "100%" 780,8 box-h=28 12/16 #52525c middle
screen path M816.5,20.75 L819,23.25 L821.5,20.75 stroke=#45403c66/0.83
screen path M24.92,16.75 L33.08,16.75 C33.73,16.75 34.25,17.27 34.25,17.92 L34.25,26.08 C34.25,26.73 33.73,27.25 33.08,27.25 L24.92,27.25 C24.27,27.25 23.75,26.73 23.75,26.08 L23.75,17.92 C23.75,17.27 24.27,16.75 24.92,16.75 Z stroke=#52525c/1.17
screen path M27.25,16.75 L27.25,27.25 stroke=#52525c/1.17
